<resources>
    <string name="app_name">BizBooks</string>
    <string name="loginpage">LOGIN</string>
    <string name="registerpage">REGISTER</string>
    <string name="pin">PIN</string>
    <string name="businessname">Business Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="forgotpasswd">Forgot Password</string>
    <string name="confirmpin">Confirm PIN</string>
    <string name="businessdescription">Business Description</string>
    <string name="phone">Phone</string>
    <string name="clearbutton">CLEAR</string>
    <string name="createbusiness">CREATE BUSINESS</string>
    <string name="deletebiz">DELETE</string>
    <string name="summaryreports">Summarized Reports</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BizBooks</string>
    <string name="nav_header_subtitle">Manage Your Business</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_business">Create Businesses</string>
    <string name="menu_expenses">Add Expenses</string>
    <string name="menu_salesreports">Sales Reports</string>
    <string name="menu_expensesreports">Expenses Reports</string>
    <string name="menu_summary">Summary</string>
    <string name="sales">Sales</string>
    <string name="menu_logout">Log Out</string>
    <string name="dailyexpenses">Todays Expenses</string>
    <string name="monthlyexpenses">Total Expenses(Ksh)</string>
    <string name="allexpenses">All Expenses</string>
    <string name="todaysales">Todays Sales</string>
    <string name="monthlysales">Total Sales(Ksh)</string>
    <string name="allsales">All Sales</string>
    <string name="addsales">Add Sales</string>
    <string name="menu_expensecost">Cost</string>
    <string name="expensedescription">Expense Description</string>
    <string name="itemdesc">Item Description</string>
    <string name="itemname">Item Name</string>
    <string name="sellingprice">Selling Price(Ksh)</string>
    <string name="addstock">Add Stock</string>
    <string name="cost">Cost (Ksh)</string>
    <string name="todaysexpenses">Today Expenses</string>
    <string name="date">Date</string>
    <string name="type">Expense Type</string>
    <string name="dailyreports">Daily Reports</string>
    <string name="stockreports">Stock Reports</string>
    <string name="dailystock">Daily Stock</string>
    <string name="allstock">All Stock</string>
    <string name="editbtn">EDIT</string>
    <string name="deletebtn">DELETE</string>
    <string name="manageexpenses">Manage Expenses</string>
    <string name="managestock">Manage Stock</string>
    <string name="managesales">Manage Sales</string>
    <string name="monthlyreports">Monthly Reports</string>
    <string name="searchreports">Search</string>
    <string name="dailysales">Total Sales(Ksh)</string>
    <string name="totalstock">Total Stock(Ksh)</string>
    <string name="totalexpenses">Total Expenses(Ksh)</string>
    <string name="stockanalysis">Profit/Loss(Ksh)</string>
    <string name="salesanalysis">Analysis</string>
    <string name="monthlystock">Total Stock(Ksh)</string>
    <string name="managebusiness">Manage Business</string>
    <string name="backup">Back Up Data</string>
    <string name="generatepdf">Download</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="expensetypes">
        <item>Transport</item>
        <item>Domestic</item>
        <item>Work Related</item>
        <item>Salaries</item>
        <item>Emergency</item>
        <item>Food</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="years">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>

</resources>
